--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,3 +2,16 @@
   padding: 0;
   margin: 0;
 }
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+a.anchor {
+  color: var(--bs-primary);
+}
+
+a.anchor:hover {
+  text-decoration: underline;
+}
