--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,3 +15,35 @@ a.anchor {
 a.anchor:hover {
   text-decoration: underline;
 }
+
+.loading-animaiton {
+  --webkit-animation: rotateImage 1.5s linear infinite;
+  animation: rotateImage 1.5s linear infinite;
+}
+
+@-webkit-keyframes rotateImage {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  50% {
+    transform: rotate(180deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotateImage {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  50% {
+    transform: rotate(180deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
