--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,6 +15,22 @@ a.anchor {
 a.anchor:hover {
   text-decoration: underline;
 }
+.container-fluid.layout-container {
+  max-width: calc(100vw - 80px);
+  margin: auto;
+  margin-top: 3rem;
+}
+
+/* X-Small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) {
+}
+
+/* Small devices (landscape phones, less than 768px) */
+@media (max-width: 767.98px) {
+  .container-fluid.layout-container {
+    max-width: 100vw;
+  }
+}
 
 .loading-animaiton {
   --webkit-animation: rotateImage 1.5s linear infinite;
